--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build && jampack ./dist",
+    "build": "astro build && jampack ./vercel/output/static",
     "preview": "astro preview",
     "sync": "astro sync",
     "astro": "astro",
