--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@astrojs/check": "^0.5.6",
     "@astrojs/rss": "^4.0.5",
+    "@astrojs/vercel": "^7.3.6",
     "@resvg/resvg-js": "^2.6.0",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
