--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "remark-collapse": "^0.1.2",
     "remark-math": "^6.0.0",
     "remark-toc": "^9.0.0",
+    "rss-parser": "^3.13.0",
     "satori": "^0.10.13",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
