--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@astrojs/rss": "^4.0.6",
     "@resvg/resvg-js": "^2.6.2",
     "astro": "^4.10.2",
+    "astro-font": "^0.0.81",
     "fuse.js": "^7.0.0",
     "github-slugger": "^2.0.0",
     "rehype-katex": "^7.0.0",
