chore: Update schedule in .imgbotconfig to weekly

--- a/.imgbotconfig
+++ b/.imgbotconfig
@@ -1,5 +1,5 @@
 {
-    "schedule": "daily",
+    "schedule": "weekly",
     //"ignoredFiles": [
     //    "*.jpg",                   // ignore by extension
     //    "image1.png",              // ignore by filename
