--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "astro-blog",
-  "version": "4.3.1",
+  "version": "4.4.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -13,36 +13,36 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.2",
+    "@astrojs/check": "^0.9.3",
     "@astrojs/rss": "^4.0.7",
     "@resvg/resvg-js": "^2.6.2",
-    "astro": "^4.13.2",
+    "astro": "^4.14.4",
     "astro-font": "^0.1.81",
     "fuse.js": "^7.0.0",
-    "github-slugger": "^2.0.0",
-    "rehype-katex": "^7.0.0",
+    "lodash.kebabcase": "^4.1.1",
+    "rehype-katex": "^7.0.1",
     "remark-collapse": "^0.1.2",
     "remark-math": "^6.0.0",
     "remark-toc": "^9.0.0",
     "rss-parser": "^3.13.0",
     "satori": "^0.10.14",
-    "tailwindcss": "^3.4.9",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
-    "@astrojs/react": "^3.6.1",
+    "@astrojs/react": "^3.6.2",
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/tailwind": "^5.1.0",
     "@tailwindcss/typography": "^0.5.14",
-    "@types/github-slugger": "^2.0.0",
-    "@types/react": "^18.3.3",
-    "@typescript-eslint/parser": "^8.0.1",
+    "@types/lodash.kebabcase": "^4.1.9",
+    "@types/react": "^18.3.4",
+    "@typescript-eslint/parser": "^8.2.0",
     "astro-eslint-parser": "^1.0.2",
-    "eslint": "^9.8.0",
+    "eslint": "^9.9.0",
     "eslint-plugin-astro": "^1.2.3",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.5",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
