chore: upgrade ESLint to v9 and update configurations

--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "astro-eslint-parser": "^1.0.2",
     "eslint": "^9.9.0",
     "eslint-plugin-astro": "^1.2.3",
+    "globals": "^15.9.0",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "typescript-eslint": "^8.2.0"
   }
 }
